# goit-ds-hw-03

./: README.md  main.py  pyproject.toml  scraper.py
