[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Petrytsya",email = "Vpetrytsia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.12.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
